--- a/index.html
+++ b/index.html
@@ -7,12 +7,24 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Gilda+Display&display=swap" rel="stylesheet">        <title>Adgolrithm</title>
+        <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Gilda+Display&family=Lora:ital@1&display=swap" rel="stylesheet">
+        <title>Adgolrithm</title>
     </head>
     <body>
         <div class="container">
-            <img id="background" src="images/background.jpg" alt="gradient background" width="100%" height="100%">
+            <img id="background" src="images/background.png" alt="gradient background" width="100%" height="100%">
             <h1>Adgolrithm</h1>
+            <h2>A gamefied ad bias auditing experience</h2>
+            <div class="info">
+                <h3>Prototype</h3>
+                <div class="prototype">
+                    <img src="images/prototype1.png" alt="prototype page one" width="170px" height="25%">
+                    <img src="images/prototype2.png" alt="prototype page two" width="171px" height="25%">
+                    <img src="images/prototype3.png" alt="prototype page three" width="170px" height="25%">
+                    <img src="images/prototype4.png" alt="prototype page four" width="171px" height="25%">
+                    <img src="images/prototype5.png" alt="prototype page five" width="170px" height="25%">
+                </div>
+            </div>
         </div>
     </body>
 </html>
