added basic framework

--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
     <body>
         <div class="container">
             <img id="background" src="images/background.png" alt="gradient background" width="100%" height="100%">
+            <a href="https://github.com/sophiajwitt">        
+                <img id="github" src="images/github.png" alt="github logo" width="80px">
+            </a>
+            <a href="https://www.linkedin.com/in/sophia-witt/">
+                <img id="linkedin" src="images/linkedin.png" alt="linkedin logo" width="80px">
+            </a>
             <h1>Adgolrithm</h1>
             <h2>A gamefied ad bias auditing experience</h2>
             <div class="info">
-                <h3>Prototype</h3>
+                <h3>Low Fidelity Prototype</h3>
                 <div class="prototype">
                     <img src="images/prototype1.png" alt="prototype page one" width="170px" height="25%">
                     <img src="images/prototype2.png" alt="prototype page two" width="171px" height="25%">
@@ -25,6 +31,58 @@
                     <img src="images/prototype5.png" alt="prototype page five" width="170px" height="25%">
                 </div>
             </div>
+                <div class="problem">
+                    <h3>Problem</h3>
+                    <p>Our goal with this project was to understand and <br>
+                        evaluate the concept of everyday algorithm auditing<br>
+                        whether and how we can empower and incentivize <br>
+                        everyday users to uncover harmful algorithmic <br>
+                        biases in AI systems and assist AI/ML teams in <br>
+                        addressing these issues. We narrowed in on<br>
+                        instagram ad bias specifically.</p>
+                </div>
+                <div class="methods">
+                    <h3>Methods</h3>
+                    <p>Our goal with this project was to understand and <br>
+                        evaluate the concept of everyday algorithm auditing<br>
+                        whether and how we can empower and incentivize <br>
+                        everyday users to uncover harmful algorithmic <br>
+                        biases in AI systems and assist AI/ML teams in <br>
+                        addressing these issues. We narrowed in on<br>
+                        instagram ad bias specifically.</p>
+                </div>
+                <div class="evidence">
+                    <h3>Evidence</h3>
+                    <p>Our goal with this project was to understand and <br>
+                        evaluate the concept of everyday algorithm auditing<br>
+                        whether and how we can empower and incentivize <br>
+                        everyday users to uncover harmful algorithmic <br>
+                        biases in AI systems and assist AI/ML teams in <br>
+                        addressing these issues. We narrowed in on<br>
+                        instagram ad bias specifically.</p>
+                </div>
+                <div class="solution">
+                    <h3>Solution</h3>
+                    <p>Our goal with this project was to understand and <br>
+                        evaluate the concept of everyday algorithm auditing<br>
+                        whether and how we can empower and incentivize <br>
+                        everyday users to uncover harmful algorithmic <br>
+                        biases in AI systems and assist AI/ML teams in <br>
+                        addressing these issues. We narrowed in on<br>
+                        instagram ad bias specifically.</p>
+                </div>
+                <div class="roles">
+                    <h3>Contributors and Roles</h3>
+                    <div class="container2">
+                    <img src="images/headshot.png" alt="photo of Sophia" width="100px" height="100px">
+                    <p class="box">
+                        I worked with help from Angela Oh, Lucia Fang, 
+                        Megan Yim, and Cheryl Zhang to create this 
+                        prototype for CMU's User Centered Research 
+                        and Evalution final project.
+                    </p>
+                    </div>
+                </div>
         </div>
     </body>
 </html>
