--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </a>
             <h1>Adgolrithm</h1>
             <h2>A gamefied ad bias auditing experience</h2>
+            <div class="flex">
             <div class="info">
                 <h3>Low Fidelity Prototype</h3>
                 <div class="prototype">
@@ -43,46 +44,58 @@
                 </div>
                 <div class="methods">
                     <h3>Methods</h3>
-                    <p>Our goal with this project was to understand and <br>
-                        evaluate the concept of everyday algorithm auditing<br>
-                        whether and how we can empower and incentivize <br>
-                        everyday users to uncover harmful algorithmic <br>
-                        biases in AI systems and assist AI/ML teams in <br>
-                        addressing these issues. We narrowed in on<br>
-                        instagram ad bias specifically.</p>
+                    <div class="method-flex">
+                    <p>Contextual Inquiry</p>
+                    <p>Semi-Structured Interview</p>
+                    <p>Usability Testing</p>
+                    <p>Affinity Diagramming</p>
+                    <p>Storyboarding</p>
+                    <p>Prototyping</p>
+                    </div>
                 </div>
                 <div class="evidence">
-                    <h3>Evidence</h3>
-                    <p>Our goal with this project was to understand and <br>
-                        evaluate the concept of everyday algorithm auditing<br>
-                        whether and how we can empower and incentivize <br>
-                        everyday users to uncover harmful algorithmic <br>
-                        biases in AI systems and assist AI/ML teams in <br>
-                        addressing these issues. We narrowed in on<br>
-                        instagram ad bias specifically.</p>
+                    <h3>Insights & Evidence</h3>
+                    <p class="quotes"> <span>Apathy</span> <br>
+                        “I don’t bother reporting ads since ads I see on social media are mostly biased anyways.” <br>
+                        <span>Awareness </span> <br>
+                        “I think if I was more aware about the ads I saw in social media and had a better <br>
+                        understanding of what potential biases there are, I would notice more bias.”<br>
+                        <span>Taking action</span> <br>
+                       “I would be willing to report ads in spite of fear of retaliation if I thought the ad was harmful.”<br>
+                       <span>Motivation to learn</span> <br>
+                        “I like playing short, daily games like crossword, so I think Adgorithm would be a <br>
+                        easy and fun way to learn more about ad bias.”
+                        </p>
                 </div>
                 <div class="solution">
                     <h3>Solution</h3>
-                    <p>Our goal with this project was to understand and <br>
-                        evaluate the concept of everyday algorithm auditing<br>
-                        whether and how we can empower and incentivize <br>
-                        everyday users to uncover harmful algorithmic <br>
-                        biases in AI systems and assist AI/ML teams in <br>
-                        addressing these issues. We narrowed in on<br>
-                        instagram ad bias specifically.</p>
+                    <p>We created a gamified experience that will be <br>
+                        an engaging method of educating users about <br>
+                        algorithmic bias in ads. By creating an “Ad <br>
+                        of the Day” game where users can guess where <br>
+                        the bias is located and who it targets. Through <br>
+                        participation in this game, we anticipate that <br>
+                        increasing awareness about AI bias will allow <br>
+                        users to notice biased ads more frequently and <br>
+                        be more incentivized to report biased ads. 
+
                 </div>
                 <div class="roles">
-                    <h3>Contributors and Roles</h3>
+                    <h3>About</h3>
                     <div class="container2">
-                    <img src="images/headshot.png" alt="photo of Sophia" width="100px" height="100px">
+                    <img src="images/headshot.png" alt="photo of Sophia" width="130px" height="130px">
+                    <p>My name is Sophia Witt, and I am an undergraduate student
+                        studying Information Systems and Human Computer Interaction.
+                    </p>
                     <p class="box">
-                        I worked with help from Angela Oh, Lucia Fang, 
-                        Megan Yim, and Cheryl Zhang to create this 
-                        prototype for CMU's User Centered Research 
-                        and Evalution final project.
+                        My role within the team was product manager which
+                        included creating weekly agendas, outlining action items, 
+                        leading usability study interviews and think alouds, quality
+                        assurance, and submitting deliverables. 
                     </p>
                     </div>
                 </div>
+            </div>
         </div>
     </body>
 </html>
