--- a/index.html
+++ b/index.html
@@ -69,15 +69,13 @@
                 </div>
                 <div class="solution">
                     <h3>Solution</h3>
-                    <p>We created a gamified experience that will be <br>
-                        an engaging method of educating users about <br>
-                        algorithmic bias in ads. By creating an “Ad <br>
-                        of the Day” game where users can guess where <br>
-                        the bias is located and who it targets. Through <br>
-                        participation in this game, we anticipate that <br>
-                        increasing awareness about AI bias will allow <br>
-                        users to notice biased ads more frequently and <br>
-                        be more incentivized to report biased ads. 
+                    <p>We created a gamified experience that will be an engaging 
+                        method of educating users about algorithmic bias in ads. 
+                        By creating an “Ad of the Day” game where users can guess 
+                        targetted demographics in ads. Through participation in 
+                        this game, we anticipate that increasing awareness about 
+                        AI bias will allow users to notice biased ads more frequently 
+                        and be more incentivized to report biased ads. </p>
 
                 </div>
                 <div class="roles">
